# Mashey_Asteroid

./: main.py  pyproject.toml  readme.md  test_mashey.py
correct_asteroid_templates/: asteroid_2000433.txt  asteroid_2004660.txt  asteroid_2172718.txt  asteroid_2509505.txt  asteroid_54225732.txt  readme.md
test_data/: readme.md
testing_data/: readme.md
